Fix grid layout
Two issues: First we need to set the border-spacing now, possibly
because we get a tbody element.  Second, the rows are set to have
white-space: pre, so we need to avoid extraneous white space around our
tags.  To keep the formatting nice in the code, we comment out all the
whitespace we don't want.

--- a/www/css/puzzle.css
+++ b/www/css/puzzle.css
@@ -76,6 +76,7 @@ puzzle-page {
     transform-origin: top left;
     -webkit-transform-origin: top left;
     border: 2px solid black;
+    border-spacing: 0;
     color: black;
     background: white;
     transition: background 2s, box-shadow 2s;
